# libbrightlink

./: .gitignore  CHANGELOG.md  README.md  meson.build  meson_options.txt
.github/workflows/: ci.yml
include/brightlink/: brightlink.h  brightlink_crypto.h
packaging/: README.md  pin-format.md
src/: brightlink.c  brightlink_crypto.c  pin_store.c  pin_store_file.c  pin_store_internal.h  pin_store_memory.c
tests/: meson.build  test_handshake_roundtrip.c  test_pin_store_file.c
tests/mock-brightnexus/: meson.build  mock-brightnexus.c
